--- a/MoodPlayer/app/build.gradle
+++ b/MoodPlayer/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.guava:guava:r05'
+    compile 'com.googlecode.jen-api:jen-api:4.x.p'
 }
