--- a/MoodPlayer/app/src/main/AndroidManifest.xml
+++ b/MoodPlayer/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -23,6 +24,11 @@
         </activity>
         <activity
             android:name=".PlayerActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".SelectModeActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name" >
         </activity>
